@@ -449,12 +449,10 @@ class TestLoadCache(unittest.TestCase):
             self.assertEqual(1, len(warn_mock.mock_calls))
 
     @mock.patch('beancount.loader.PICKLE_CACHE_THRESHOLD', 0.0)
-    def test_load_cache_override_filename_pattern(self):
-        orig_load_file = loader._load_file
-        prev_env = os.getenv('BEANCOUNT_LOAD_CACHE_FILENAME')
-        os.environ['BEANCOUNT_LOAD_CACHE_FILENAME'] = '__{filename}__'
-        loader.initialize()
-        try:
+    @mock.patch.object(loader, 'load_file', loader.load_file)
+    def test_load_cache_override_filename_pattern_by_env_var(self):
+        with test_utils.environ('BEANCOUNT_LOAD_CACHE_FILENAME', '__{filename}__'):
+            loader.initialize(use_cache=True)
             with test_utils.tempdir() as tmp:
                 test_utils.create_temporary_files(tmp, {
                     'apples.beancount': """
@@ -464,13 +462,37 @@ class TestLoadCache(unittest.TestCase):
                 entries, errors, options_map = loader.load_file(filename)
                 self.assertEqual({'__apples.beancount__', 'apples.beancount'},
                                  set(os.listdir(tmp)))
-        finally:
-            # Restore pre-test values.
-            loader._load_file = orig_load_file
-            if prev_env is None:
-                del os.environ['BEANCOUNT_LOAD_CACHE_FILENAME']
-            else:
-                os.environ['BEANCOUNT_LOAD_CACHE_FILENAME'] = prev_env
+
+    @mock.patch('beancount.loader.PICKLE_CACHE_THRESHOLD', 0.0)
+    @mock.patch.object(loader, 'load_file', loader.load_file)
+    def test_load_cache_override_filename_pattern_by_argument(self):
+        with test_utils.tempdir() as tmp:
+            cache_filename = path.join(tmp, "__{filename}__")
+            loader.initialize(use_cache=True, cache_filename=cache_filename)
+            test_utils.create_temporary_files(tmp, {
+                'apples.beancount': """
+                  2014-01-01 open Assets:Apples
+                """})
+            filename = path.join(tmp, 'apples.beancount')
+            entries, errors, options_map = loader.load_file(filename)
+            self.assertEqual({'__apples.beancount__', 'apples.beancount'},
+                             set(os.listdir(tmp)))
+
+    @mock.patch('beancount.loader.PICKLE_CACHE_THRESHOLD', 0.0)
+    @mock.patch.object(loader, 'load_file', loader.load_file)
+    def test_load_cache_disable(self):
+        with test_utils.tempdir() as tmp:
+            cache_filename = path.join(tmp, "__{filename}__")
+            for kwargs in [dict(use_cache=False),
+                           dict(use_cache=False, cache_filename=cache_filename)]:
+                loader.initialize(**kwargs)
+                test_utils.create_temporary_files(tmp, {
+                    'apples.beancount': """
+                      2014-01-01 open Assets:Apples
+                    """})
+                filename = path.join(tmp, 'apples.beancount')
+                entries, errors, options_map = loader.load_file(filename)
+                self.assertEqual({'apples.beancount'}, set(os.listdir(tmp)))
 
 
 class TestEncoding(unittest.TestCase):
