@@ -23,11 +23,25 @@ def main():
     parser.add_argument('-v', '--verbose', action='store_true',
                         help='Print timings.')
 
+    # Note: These are useful during development. We need to devise a global
+    # mechanism that will work from all the invocation programs, embedded in the
+    # loader.
+    parser.add_argument('-C', '--no-cache', action='store_false',
+                        dest='use_cache', default=True,
+                        help='Disable the cache from the command-line.')
+    parser.add_argument('--cache-filename', action='store',
+                        help='Override the name of the cache')
+
     opts = parser.parse_args()
 
     if opts.verbose:
         logging.basicConfig(level=logging.INFO,
                             format='%(levelname)-8s: %(message)s')
+
+    # Override loader caching setup if disabled or if the filename is
+    # overridden.
+    if not opts.use_cache or opts.cache_filename:
+        loader.initialize(opts.use_cache, opts.cache_filename)
 
     with misc_utils.log_time('beancount.loader (total)', logging.info):
         # Load up the file, print errors, checking and validation are invoked
